@@ -9,6 +9,7 @@
   * Object#super must be called from inside of an instance method
   * Remove Object#instance_extended_* methods
   * Add Object#call
+  * Object#call accepts a variable number of arguments and merges them with the last array of arguments
 
 2009-03-11 - Sean Huber (shuber@huberry.com)
   * Rename to phby
